--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             border-radius: 8px;
             border-top: 3px solid var(--color-accent); /* Use border-top or similar for visual interest */
             text-align: center; /* Center content */
-            cursor: pointer; /* Indicate clickability */
+            /* Removed cursor: pointer; from item, added to placeholder */
             transition: transform 0.3s ease, box-shadow 0.3s ease; /* Hover effect */
         }
         .use-case-item:hover {
@@ -215,27 +215,29 @@
             color: var(--color-text-muted);
             margin-bottom: 15px; /* Add space before the video placeholder */
         }
+
+        /* Style for the video embed container */
         .use-case-item .video-placeholder {
-            /* Style for the clickable area */
-            display: flex; /* Center content */
-            align-items: center;
-            justify-content: center;
-            min-height: 150px; /* Give it some minimum height */
-            background-color: rgba(var(--color-accent-rgb, 0, 153, 255), 0.2); /* Light accent background */
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100%) */
+            height: 0;
+            overflow: hidden;
+            background-color: rgba(var(--color-accent-rgb, 0, 153, 255), 0.1); /* Light accent background for loading */
             border-radius: 4px;
-            font-size: 14px;
-            color: var(--color-accent);
-            font-weight: 600;
-            border: 2px dashed var(--color-accent);
-            opacity: 0.8;
-            transition: opacity 0.3s ease;
+             /* Removed old text/flex styles */
+            border: 2px dashed var(--color-accent); /* Kept the border style */
+             cursor: pointer; /* Indicate clickability on the placeholder area */
         }
-         .use-case-item:hover .video-placeholder {
-             opacity: 1;
-         }
-         .use-case-item .video-placeholder p {
-             color: var(--color-accent); /* Ensure text is accent color */
-             margin: 0; /* Remove paragraph margin */
+
+         /* Style for the iframe */
+         .use-case-item .video-placeholder iframe {
+             position: absolute;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             border: 0; /* Remove iframe default border */
          }
 
 
@@ -272,6 +274,10 @@
             .feature-list { grid-template-columns: 1fr; } /* Stack features on mobile */
              .use-cases-grid {
                 grid-template-columns: 1fr; /* Stack use cases on mobile */
+            }
+             /* Adjust video placeholder aspect ratio slightly on smaller screens if needed */
+            .use-case-item .video-placeholder {
+                padding-bottom: 65%; /* Example: closer to 4:3 or just a bit taller */
             }
         }
     </style>
@@ -385,11 +391,11 @@
                     <div class="scrolling-text-item"><span>DATA DRIVEN</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
                     <div class="scrolling-text-item"><span>SAAS</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
                     <!-- Duplicato per marquee -->
-                    <div class="scrolling-text-item"><span>AI</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></div>
-                    <div class="scrolling-text-item"><span>AUTOMAZIONE</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></div>
-                    <div class="scrolling-text-item"><span>INNOVAZIONE</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></div>
-                    <div class="scrolling-text-item"><span>DATA DRIVEN</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></div>
-                    <div class="scrolling-text-item"><span>SAAS</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></div>
+                    <div class="scrolling-text-item"><span>AI</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
+                    <div class="scrolling-text-item"><span>AUTOMAZIONE</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
+                    <div class="scrolling-text-item"><span>INNOVAZIONE</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
+                    <div class="scrolling-text-item"><span>DATA DRIVEN</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
+                    <div class="scrolling-text-item"><span>SAAS</span></div> <div class="scrolling-text-item"><svg viewBox="0 0 32 32"><path d="M15.167 32C13.935 24.94 6.989 18.305 0 16.833V15.083C7.033 13.403 13.791 7.294 15.167 0h1.75C18.113 7.107 25.028 13.562 32 15.083v1.75C25.157 18.251 18.071 24.909 16.917 32z"/></svg></div>
                 </div>
             </div>
             <div class="scrolling-text-outer">
@@ -440,24 +446,22 @@
         <section id="casi-utilizzo">
             <a href="#casi-utilizzo" class="section-title-link"><h2>CASI DI UTILIZZO</h2><div class="section-title-lines"><div class="line-bg"></div><div class="line-accent"></div></div></a>
             <div class="container">
-                <p>Scopri come AutoCare.AI può essere utilizzato in diversi scenari pratici per ottimizzare il lavoro e migliorare l'esperienza del cliente.</p>
+                <p>Scopri come AutoCare.AI può essere utilizzato per diverse finalità.</p>
                 <div class="use-cases-grid">
                     <div class="use-case-item">
-                        <h4>Stima Rapida per Clienti</h4>
-                        <p>Permette ai clienti di ottenere una stima preliminare da casa, accelerando il processo iniziale.</p>
-                         <!-- Qui in futuro inserirai il codice per il video YouTube cliccabile -->
+                        <h4>Stima dei danni</h4>
+                        <p>Permette ai clienti di ottenere una bozza di preventivo personalizzato.</p>
+                         <!-- QUI HO INSERITO IL PRIMO VIDEO EMBED -->
                         <div class="video-placeholder">
-                            <p>Video Esempio 1 (Clicca per vedere)</p>
+                             <iframe src="https://www.youtube.com/embed/rdTKRRRF-YE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="use-case-item">
-                        <h4>Supporto per Accettazione</h4>
-                        <p>Assiste il personale in accettazione nell'analisi rapida dei danni visibili.</p>
-                        <!-- Qui in futuro inserirai il codice per il video YouTube cliccabile -->
+                        <h4>Carrozzerie aderenti</h4>
+                        <p>Permette agli utenti di visualizzare la posizione delle carrozzerie nelle vicinanze.</p>
+                        <!-- QUI HO INSERITO IL SECONDO VIDEO EMBED -->
                         <div class="video-placeholder">
-                            <p>Video Esempio 2 (Clicca per vedere)</p>
-                        </div>
-                    </div>
+                             <iframe src="https://www.youtube.com/embed/C67MG4xKWXw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -557,6 +561,5 @@
         });
 
     </script>
-
 </body>
 </html>
