--- a/index.html
+++ b/index.html
@@ -419,10 +419,9 @@
             <div class="container">
                  <p>AutoCare.AI si basa su Google Gemini Flash 2.5 PRO tramite chiave API ottenibile grazie:</p>
                  <ul class="simple-list">
-                    <li><strong>Chiave API -</strong> E' possibile sviluppare le proprie soluzioni AI utilizzando l'API gratuita di Google AI Studio</li>
-                    <li><strong>Text Generation -</strong> Il modello elebora fino a 1 milione di token</li>
-                    <li><strong>Image Recognition -</strong> Analizza testo e immagini in modo gratuito, rapido e accurato</li>
-                    <li><strong>Linguaggi di programmazione -</strong> Abbiamo utilizzato Visual Studio Code per la programmazione Pyhon</li>
+                    <li><strong>Chiave API -</strong> Abbiamo utilizzato la chiave API gratuita di Google AI Studio e di Google Maps</li>
+                    <li><strong>Chatbot -</strong> Abbiamo utilizzato Flowise AI per il prompting e per progettare il flusso del chatbot</li>
+                    <li><strong>Strumenti di sviluppo -</strong> Abbiamo utilizzato Visual Studio Code per la personalizzazione grafica</li>
                     <li><strong>Cloude Self Hosting -</strong> Abbiamo reso online il progetto mediante self hosting gratuito su Github Pages</li>
                  </ul>
             </div>
@@ -472,7 +471,7 @@
 
     <footer id="main-footer">
         <div class="footer-content">
-            <p class="copyright">© 2024 AutoCare.AI. Tutti i diritti riservati.</p>
+            <p class="copyright">© 2025 AutoCare.AI. Tutti i diritti riservati.</p>
         </div>
     </footer>
 
