--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
         <section id="tecnologia">
              <a href="#tecnologia" class="section-title-link"><h2>TECNOLOGIA UTILIZZATA</h2><div class="section-title-lines"><div class="line-bg"></div><div class="line-accent"></div></div></a>
             <div class="container">
-                 <p>AutoCare.AI si basa su Google Gemini Flash 2.5 PRO tramite chiave API ottenibile grazie:</p>
+                 <p>AutoCare.AI si basa su Google Gemini Flash 2.5 PRO. Lo abbiamo realizzato utilizzando:</p>
                  <ul class="simple-list">
                     <li><strong>Chiave API -</strong> Abbiamo utilizzato la chiave API gratuita di Google AI Studio e di Google Maps</li>
-                    <li><strong>Chatbot -</strong> Abbiamo utilizzato Flowise AI per il prompting e per progettare il flusso del chatbot</li>
+                    <li><strong>Architettura del Chatbot -</strong> Abbiamo utilizzato Flowise AI per il prompting e per progettare il flusso del chatbot</li>
                     <li><strong>Strumenti di sviluppo -</strong> Abbiamo utilizzato Visual Studio Code per la personalizzazione grafica</li>
                     <li><strong>Cloude Self Hosting -</strong> Abbiamo reso online il progetto mediante self hosting gratuito su Github Pages</li>
                  </ul>
