--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                  <p>AutoCare.AI si basa su Google Gemini Flash 2.5 PRO. Lo abbiamo realizzato utilizzando:</p>
                  <ul class="simple-list">
                     <li><strong>Chiave API -</strong> Abbiamo utilizzato la chiave API gratuita di Google AI Studio e di Google Maps</li>
-                    <li><strong>Architettura del Chatbot -</strong> Abbiamo utilizzato Flowise AI per il prompting e per progettare il flusso del chatbot</li>
+                    <li><strong>Architettura del Chatbot -</strong> Abbiamo utilizzato Flowise AI per il prompting e per il flusso del chatbot</li>
                     <li><strong>Strumenti di sviluppo -</strong> Abbiamo utilizzato Visual Studio Code per la personalizzazione grafica</li>
                     <li><strong>Cloude Self Hosting -</strong> Abbiamo reso online il progetto mediante self hosting gratuito su Github Pages</li>
                  </ul>
