--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         <div class="step-number">1.</div>
                         <div class="step-content">
                             <h4>Scarica l'immagine di test</h4>
-                            <p>Per prima cosa, scarica l'immagine di una portiera danneggiata che useremo per il test. <a href="https://i.postimg.cc/jCVLs8cZ/portiera-test.jpg" target="_blank" rel="noopener noreferrer">Clicca qui per scaricare</a>.</p>
+                            <p>Per prima cosa, scarica l'immagine di una portiera danneggiata che useremo per il test. <a href="https://drive.google.com/file/d/1AY2YEKDyzVYSOMV4UVxa-m8foe-Un2XG/view?usp=sharing">Clicca qui per scaricare</a>.</p>
                         </div>
                     </li>
                     <li class="step-item">
